--- a/board/static/style.css
+++ b/board/static/style.css
@@ -1,34 +1,28 @@
 *{
  box-sizing: border-box;
 }
-
 body {
- font-family: sans-serif;
- font-size: 20px;
- margin: 0 auto;
- text-align: center;
+font-family: sans-serif;
+font-size: 20px;
+margin: 0 auto;
+text-align: center;
 }
-
-a,
-a:visited {
- color:#007bff;
+a, a:visited {
+color:#007bff;
 }
 
 a:hover {
- color:#0056b3;
+color:#0056b3;
 }
-
 nav ul {
- list-style-type:none;
- padding: 0;
+list-style-type:none;
+padding: 0;
 }
-
 nav ul li {
- display:inline;
- margin: 0 5px;
+display:inline;
+margin: 0 5px;
 }
-
 main {
- width:80%;
- margin:0 auto;
+width:80%;
+margin:0 auto;
 }
