--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Message Board-{% block title %}{% endblock title %}</title>
- <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
+  <meta charset="UTF-8">
+  <title>Message Board - {% block title %}{% endblock title %}</title>
 </head>
 <body>
-<h1>Message Board</h1>
-{% include("_navigation.html") %}
-<section>
- <header>
-  {% block header %}{% endblock header %}
- </header>
- <main>
-  {% block content %}<p>No messages.</p>{% endblock content %}
- </main>
-</section>
+  <h1>Message Board</h1>
+  <nav>
+    <a href="{{ url_for('pages.home') }}">Home</a> |
+    <a href="{{ url_for('pages.about') }}">About</a>
+  </nav>
+  <hr>
+  {% block content %}{% endblock %}
 </body>
 </html>
