--- a/board/templates/pages/about.html
+++ b/board/templates/pages/about.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
-{% block header %}
- <h2>{% block title %}About{% endblock title %}</h2>
-{% endblock header %}
+{% block title %}About{% endblock title %}
 
 {% block content %}
- <p>This is a message board for friendly messages.</p>
-{% endblock content %}
+  <h2>About</h2>
+  <p>This is a message board for friendly messages.</p>
+{% endblock %}
