--- a/board/templates/pages/home.html
+++ b/board/templates/pages/home.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 
 {% block header %}
- <h2>{% block title %}Home{% endblock title %}</h2>
+<h2>{% block title %}Home{% endblock title %}</h2>
 {% endblock header %}
 
 {% block content %}
- <p>
- Learn more about this project by visiting the <a
-href="{{ url_for('pages.about') }}">About page</a>. 
- </p>
+<p>
+Learn more about this project by visiting the <a href="{{ url_for('pages.about') }}">About page</a>.
+</p>
+
+</p>
+Create a new post by clicking <a href="{{ url_for('posts.create') }}">here</a>.
+</p>
 {% endblock content %}
